Fix title on mobile devices

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -177,7 +177,6 @@ pre
   to
     top: 80%
 
-
 .section
   padding: 3em 1em
   max-width: 1000px
@@ -194,6 +193,9 @@ pre
   font-weight: 900
   font-size: 4em
   text-transform: uppercase
+  
+  @media phone
+    font-size: 3em
   
 .section-text, .section-list--item
   font-weight: normal
@@ -219,7 +221,6 @@ pre
   margin-left: 1em
   margin-bottom: 1em
 
-
 .footer
   padding: 2em 0
   margin-top: 5em
@@ -230,6 +231,7 @@ pre
   color: #ccc
   text-align: center
   font-weight: normal
+  line-height: 1.6em
   
   a
     color: @color
